
=======================================================
		WanT code:  Log of Changes 
=======================================================


29 Jun 2012     computational time and memusage partly optimized in transport
		calculation to deal with cp2k basis (thanks to Leopold Talirz for help). 
		Bug fixed in writing correlation memory (transport). 
		Significant memory optimization on transport started. (AF)

25 Jun 2012     memusage report moved after workspace allocation in transport. 
		Variable transfer_thr added to conductor namelist. (AF)

21 Jun 2012     write_ham.f90 (written by MBN) inlcuded in the main distribution. (AF)

08 Jun 2012     implementation of the atmproj basis done (minimal working case). (AF)

07 Jun 2012     atomicproj_tools.f90 added: it is meant to convert atomic projection data
		from QE to produce a real-space representation of the KS Hamiltonian. (AF)

06 Jun 2012     cp2k_tools.f90 added; interface to cp2k (transport only) implemented and
		testing started. The contribution of C.A. Pignedoli and L. Talirz is
		acknowledged. Interface is working. (AF)

25 May 2012     qexml.f90 updated to deal with QE-5.0 (CELL_SYMMETRY now optional). (AF)

13 Apr 2012     midpoint.f90 generalized to deal with lower bound cutoff. (AF)

23 Feb 2012     qexml.f90 changed to allow postprocessing of CP runs. 
		Inclusion of magma libs started. (AF)

10 Feb 2012     CUDA implementation compiling and running, but still crashing. (AF)

01 Feb 2012     branch for version 2.4.0 started (v2.4.0 almost release compliant).
		version number in trunk changed to 2.5.0_alpha1 . Inclusion of
		phiGEMM (CUDA and GPU) started (thanks also to Filippo Spiga). 
		conf/ directory renamed to config. (AF)

-------------------------------------------------
Date: 01 Feb 2012    Version: WanT-2.4.0
-------------------------------------------------

Jan 30 2012     util.f90 updated; some calls to utile wrappers renamed. (AF)
